--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Build and push
+      - name: Build
         uses: docker/build-push-action@v2
         with:
           context: .
+          file: {context}/Containerfile
